@@ -5,6 +5,22 @@ Attributes and methods will be added as needed for tests.
 
 from idlelib.idle_test.mock_tk import Text
 
+class Func:
+    '''Mock function captures args and returns result set by test.
+
+    Most common use will probably be to mock methods.
+    mock_tk.Var and Mbox_func are special cases of this.
+    '''
+    def __init__(self, result=None):
+        self.result = result
+        self.args = None
+        self.kwds = None
+    def __call__(self, *args, **kwds):
+        self.args = args
+        self.kwds = kwds
+        return self.result
+
+
 class Editor:
     '''Minimally imitate EditorWindow.EditorWindow class.
     '''
@@ -16,6 +32,7 @@ class Editor:
         first = self.text.index('1.0')
         last = self.text.index('end')
         return first, last
+
 
 class UndoDelegator:
     '''Minimally imitate UndoDelegator,UndoDelegator class.
