@@ -1,8 +1,26 @@
 """Classes that replace tkinter gui objects used by an object being tested.
 
-A gui object is anything with a master or parent paramenter, which is typically
-required in spite of what the doc strings say.
+A gui object is anything with a master or parent paramenter, which is
+typically required in spite of what the doc strings say.
 """
+
+class Event:
+    '''Minimal mock with attributes for testing event handlers.
+
+    This is not a gui object, but is used as an argument for callbacks
+    that access attributes of the event passed. If a callback ignores
+    the event, other than the fact that is happened, pass 'event'.
+
+    Keyboard, mouse, window, and other sources generate Event instances.
+    Event instances have the following attributes: serial (number of
+    event), time (of event), type (of event as number), widget (in which
+    event occurred), and x,y (position of mouse). There are other
+    attributes for specific events, such as keycode for key events.
+    tkinter.Event.__doc__ has more but is still not complete.
+    '''
+    def __init__(self, **kwds):
+        "Create event with attributes needed for test"
+        self.__dict__.update(kwds)
 
 class Var:
     "Use for String/Int/BooleanVar: incomplete"
@@ -20,9 +38,10 @@ class Mbox_func:
 
     Instead of displaying a message box, the mock's call method saves the
     arguments as instance attributes, which test functions can then examime.
+    The test can set the result returned to ask function
     """
-    def __init__(self):
-        self.result = None  # The return for all show funcs
+    def __init__(self, result=None):
+        self.result = result  # Return None for all show funcs
     def __call__(self, title, message, *args, **kwds):
         # Save all args for possible examination by tester
         self.title = title
